# ghostsiem

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml
examples/rules/: 001_failed_ssh_login.yml  002_ssh_brute_force.yml  003_ssh_login_unusual.yml  004_sudo_command.yml  005_new_user_created.yml  006_service_state_change.yml  007_firewall_rule_change.yml  008_large_outbound_transfer.yml
src/ghostsiem/: __init__.py  __main__.py  _types.py  cli.py  config.py  normalizer.py
src/ghostsiem/alerts/: __init__.py  handlers.py  manager.py
src/ghostsiem/api/: __init__.py  app.py  routes.py
src/ghostsiem/collectors/: __init__.py  auth.py  base.py  jsonfile.py  manager.py  syslog.py
src/ghostsiem/detection/: __init__.py  builtin_rules.py  engine.py  rule.py  sigma_loader.py
src/ghostsiem/storage/: __init__.py  store.py
tests/: conftest.py
tests/test_collectors/: test_auth.py
tests/test_detection/: test_engine.py
tests/test_storage/: test_store.py
