[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostsiem"
version = "0.1.0"
description = "Lightweight Security Information and Event Management tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joe Munene", email = "baptiste.atanasije@gmail.com" },
]
keywords = ["siem", "security", "detection", "sigma", "blue-team"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "coverage>=7.0",
]

[project.scripts]
ghostsiem = "ghostsiem.cli:app"

[project.urls]
Homepage = "https://github.com/ghostsiem/ghostsiem"
Repository = "https://github.com/ghostsiem/ghostsiem"
Issues = "https://github.com/ghostsiem/ghostsiem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostsiem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
